--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=}, initial-scale=1.0" />
+    <meta name="viewport" content="width=, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css">
     <title>Mystic Fjord</title>
 </head>
@@ -14,10 +14,10 @@
             <span class="header-title">Mystic Fjord</span>
             <nav>
                 <ul class="header-ul">
-                    <li><a href="">BLOG</a></li>
-                    <li><a href="">ABOUT</a></li>
-                    <li><a href="">LINK</a></li>
-                    <li><a href="">PROJECTS</a></li>
+                    <li><a href="index.html">BLOG</a></li>
+                    <li><a href="index.html">ABOUT</a></li>
+                    <li><a href="index.html">LINK</a></li>
+                    <li><a href="index.html">PROJECTS</a></li>
                 </ul>
             </nav>
         </section>
@@ -28,7 +28,7 @@
         <hr>
         <br><br>
 
-        <section class="section-main">
+        <section data-id="1" class="section-main clickable-section">
             <img class="img-main" src="assets/img/image-florence.jpg" alt="">
             <p class="p-main">
             <h1>
@@ -42,7 +42,7 @@
         <h2>All articles</h2>
         <div class="articles">
 
-            <section class="section-sub" onclick="location.href='/index.html'">
+            <section data-id="2" class="section-sub clickable-section" onclick="location.href='post.html'">
                 <img class="img-sub-article" src="assets/img/singapura.jpg" alt="">
                 <p class="p-sub-article">
                 <h2 class="h2-sub-article">
@@ -50,15 +50,39 @@
                 </h2>
                 </p>
             </section>
-            <section class="section-sub" onclick="location.href='/index.html'">
+            <section data-id="3" class="section-sub clickable-section" onclick="location.href='/index.html'">
                 <img class="img-sub-article" src="assets/img/Foz-do-Iguacu-Visit-Brazil-5.jpg" alt="">
                 <p class="p-sub-article">
                 <h2 class="h2-sub-article">
-                    The Future of Work
+                    The beauty of Paraná
                 </h2>
                 </p>
             </section>
-            <section class="section-sub" onclick="location.href='/index.html'">
+            <section data-id="4" class="section-sub clickable-section" onclick="location.href='/index.html'">
+                <img class="img-sub-article" src="assets/img/natal.jpg" alt="">
+                <p class="p-sub-article">
+                <h2 class="h2-sub-article">
+                    "Christimas of Brazil"
+                </h2>
+                </p>
+            </section>
+            <section data-id="5" class="section-sub clickable-section" onclick="location.href='/index.html'">
+                <img class="img-sub-article" src="assets/img/vt.jpg" alt="">
+                <p class="p-sub-article">
+                <h2 class="h2-sub-article">
+                    The switzerland of Bahia
+                </h2>
+                </p>
+            </section>
+            <section data-id="6" class="section-sub clickable-section" onclick="location.href='/index.html'">
+                <img class="img-sub-article" src="assets/img/para.webp" alt="">
+                <p class="p-sub-article">
+                <h2 class="h2-sub-article">
+                    Tourism in Pará
+                </h2>
+                </p>
+            </section>
+            <section data-id="7" class="section-sub clickable-section" onclick="location.href='/index.html'">
                 <img class="img-sub-article" src="assets/img/renewable-energy.jpg" alt="">
                 <p class="p-sub-article">
                 <h2 class="h2-sub-article">
@@ -66,31 +90,7 @@
                 </h2>
                 </p>
             </section>
-            <section class="section-sub" onclick="location.href='/index.html'">
-                <img class="img-sub-article" src="assets/img/renewable-energy.jpg" alt="">
-                <p class="p-sub-article">
-                <h2 class="h2-sub-article">
-                    Advancements in Renewable Energy Technologies
-                </h2>
-                </p>
-            </section>
-            <section class="section-sub" onclick="location.href='/index.html'">
-                <img class="img-sub-article" src="assets/img/renewable-energy.jpg" alt="">
-                <p class="p-sub-article">
-                <h2 class="h2-sub-article">
-                    Advancements in Renewable Energy Technologies
-                </h2>
-                </p>
-            </section>
-            <section class="section-sub" onclick="location.href='/index.html'">
-                <img class="img-sub-article" src="assets/img/renewable-energy.jpg" alt="">
-                <p class="p-sub-article">
-                <h2 class="h2-sub-article">
-                    Advancements in Renewable Energy Technologies
-                </h2>
-                </p>
-            </section>
-            <section class="section-sub" onclick="location.href='/index.html'">
+            <section data-id="8" class="section-sub clickable-section" onclick="location.href='/index.html'">
                 <img class="img-sub-article" src="assets/img/renewable-energy.jpg" alt="">
                 <p class="p-sub-article">
                 <h2 class="h2-sub-article">
@@ -122,6 +122,7 @@
         <p class="footer-credits">&copy; 2023 Mystic Fjord Co. <br> All rights reserved</p>
 
         <br><br>
+        <script src="dist/selector.js"></script>
 
     </footer>
 </body>
