--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/assets/styles.css">
     <title>Mystic Fjord</title>
 </head>
 
@@ -83,21 +83,14 @@
                 </p>
             </section>
             <section data-id="7" class="section-sub clickable-section" onclick="location.href='/index.html'">
-                <img class="img-sub-article" src="assets/img/renewable-energy.jpg" alt="">
+                <img class="img-sub-article" src="assets/img/perobal.jpg" alt="">
                 <p class="p-sub-article">
                 <h2 class="h2-sub-article">
-                    Advancements in Renewable Energy Technologies
+                    Peroba City
                 </h2>
                 </p>
             </section>
-            <section data-id="8" class="section-sub clickable-section" onclick="location.href='/index.html'">
-                <img class="img-sub-article" src="assets/img/renewable-energy.jpg" alt="">
-                <p class="p-sub-article">
-                <h2 class="h2-sub-article">
-                    Advancements in Renewable Energy Technologies
-                </h2>
-                </p>
-            </section>
+        
 
         </div>
 
